@@ -115,3 +115,4 @@ issue 125: when generating chunks in runtime, blocks are not shown until update;
            generation finished
 issue 126: top textures of BoxModel when using UV's were wrong; fixed on: 03.03.2020 by uuk
 issue 127: missing texture was always rendered, also when deactivated on missing faces; fixed on: 03.03.2020 by uuk
+issue 114: "OR"-condition in block models was not working: fixed on: 05.03.2020 by uuk
